unpackaged/main/default/objects/Case__c/Case__c.object-meta.xml
<CustomObject>
    <description>Used for VLNDC Referrals</description>
    <label>Case/Referrals</label>
    <nameField>
        <displayFormat>R-{0000000}</displayFormat>
        <label>Case Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>