unpackaged/main/default/objects/Case__c/fields/Additional_information__c.field-meta.xml
<CustomField>
    <fullName>Additional_information__c</fullName>
    <description>Additional information for referral purposes</description>
    <label>Additional information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>