unpackaged/main/default/objects/Case__c/fields/Age_at_date_of_service__c.field-meta.xml
<CustomField>
    <fullName>Age_at_date_of_service__c</fullName>
    <label>Age at date of service</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>