unpackaged/main/default/objects/Case__c/fields/Alternative_Contact__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Contact__c</fullName>
    <label>Alternative Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>