unpackaged/main/default/objects/Case__c/fields/Caller_is_has_been_a_victim_of_a_crime__c.field-meta.xml
<CustomField>
    <fullName>Caller_is_has_been_a_victim_of_a_crime__c</fullName>
    <label>Caller is/has been a victim of a crime?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>