unpackaged/main/default/objects/Case__c/fields/Caller_is_seeking_legal_help_in_DC__c.field-meta.xml
<CustomField>
    <fullName>Caller_is_seeking_legal_help_in_DC__c</fullName>
    <label>Caller is seeking legal help in DC?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>