unpackaged/main/default/objects/Case__c/fields/Caller_is_seeking_legal_help_related_to__c.field-meta.xml
<CustomField>
    <fullName>Caller_is_seeking_legal_help_related_to__c</fullName>
    <description>Caller is seeking legal help related to crime?</description>
    <inlineHelpText>Caller is seeking legal help related to crime?</inlineHelpText>
    <label>Seeking legal help related to crime?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>