unpackaged/main/default/objects/Case__c/fields/Case_specifics__c.field-meta.xml
<CustomField>
    <fullName>Case_specifics__c</fullName>
    <label>Case specifics</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>