unpackaged/main/default/objects/Case__c/fields/College_Student__c.field-meta.xml
<CustomField>
    <fullName>College_Student__c</fullName>
    <label>College Student</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>