unpackaged/main/default/objects/Case__c/fields/Country_of_Origin_if_applicable__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Origin_if_applicable__c</fullName>
    <label>Country of Origin, if applicable</label>
    <length>255</length>
    <type>Text</type>
</CustomField>