unpackaged/main/default/objects/Case__c/fields/Court_date__c.field-meta.xml
<CustomField>
    <fullName>Court_date__c</fullName>
    <label>Court date</label>
    <type>Date</type>
</CustomField>