unpackaged/main/default/objects/Case__c/fields/Date_of_crime__c.field-meta.xml
<CustomField>
    <fullName>Date_of_crime__c</fullName>
    <label>Date of crime</label>
    <type>Date</type>
</CustomField>