unpackaged/main/default/objects/Case__c/fields/DC_Resident__c.field-meta.xml
<CustomField>
    <fullName>DC_Resident__c</fullName>
    <label>DC Resident</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
            <value>
                <fullName>YES</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>