unpackaged/main/default/objects/Case__c/fields/DOB_Unknown_Declined__c.field-meta.xml
<CustomField>
    <fullName>DOB_Unknown_Declined__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DOB Unknown / Declined</label>
    <type>Checkbox</type>
</CustomField>