unpackaged/main/default/objects/Case__c/fields/E_mail_address__c.field-meta.xml
<CustomField>
    <fullName>E_mail_address__c</fullName>
    <label>E-mail address</label>
    <type>Email</type>
</CustomField>