unpackaged/main/default/objects/Case__c/fields/Employed__c.field-meta.xml
<CustomField>
    <fullName>Employed__c</fullName>
    <label>Employed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>