unpackaged/main/default/objects/Case__c/fields/Household_size__c.field-meta.xml
<CustomField>
    <fullName>Household_size__c</fullName>
    <label>Household size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>