unpackaged/main/default/objects/Case__c/fields/Housing_Status__c.field-meta.xml
<CustomField>
    <fullName>Housing_Status__c</fullName>
    <label>Housing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Permanent, stable residence in client&#39;s name</fullName>
            </value>
            <value>
                <fullName>Permanent, stable residence not in client&#39;s name</fullName>
            </value>
            <value>
                <fullName>Dorm</fullName>
            </value>
            <value>
                <fullName>Temporarily staying with family or friends</fullName>
            </value>
            <value>
                <fullName>Shelter</fullName>
            </value>
            <value>
                <fullName>Transitional Housing</fullName>
            </value>
            <value>
                <fullName>Outdoors (all places not meant for habitation)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>