unpackaged/main/default/objects/Case__c/fields/If_temporary_current_length_of_time__c.field-meta.xml
<CustomField>
    <fullName>If_temporary_current_length_of_time__c</fullName>
    <description>If temporary, current length of time there</description>
    <inlineHelpText>If temporary, current length of time there</inlineHelpText>
    <label>If temporary, current length of time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>