unpackaged/main/default/objects/Case__c/fields/Legal_Issues_for_Referral__c.field-meta.xml
<CustomField>
    <fullName>Legal_Issues_for_Referral__c</fullName>
    <label>Legal Issues for Referral</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Civil Rights</fullName>
            </value>
            <value>
                <fullName>Disability Rights</fullName>
            </value>
            <value>
                <fullName>Government Claim</fullName>
            </value>
            <value>
                <fullName>Police Misconduct</fullName>
            </value>
            <value>
                <fullName>Consumer Law</fullName>
            </value>
            <value>
                <fullName>Bankruptcy</fullName>
            </value>
            <value>
                <fullName>Creditor Harassment</fullName>
            </value>
            <value>
                <fullName>Debt Collection</fullName>
            </value>
            <value>
                <fullName>Identity Theft</fullName>
            </value>
            <value>
                <fullName>Predatory Lending</fullName>
            </value>
            <value>
                <fullName>Unfair/Deceptive Sales Practices</fullName>
            </value>
            <value>
                <fullName>Crime Victims&#39; Rights</fullName>
            </value>
            <value>
                <fullName>Crime Victims&#39; Compensation Program</fullName>
            </value>
            <value>
                <fullName>Declination</fullName>
            </value>
            <value>
                <fullName>Filing Police Report</fullName>
            </value>
            <value>
                <fullName>Grand Jury</fullName>
            </value>
            <value>
                <fullName>NonRepresentation and Advocacy</fullName>
            </value>
            <value>
                <fullName>Other Representation Needs</fullName>
            </value>
            <value>
                <fullName>Privacy</fullName>
            </value>
            <value>
                <fullName>Restitution</fullName>
            </value>
            <value>
                <fullName>Right to be Heard</fullName>
            </value>
            <value>
                <fullName>Right to be Present</fullName>
            </value>
            <value>
                <fullName>Right to Notice</fullName>
            </value>
            <value>
                <fullName>Criminal</fullName>
            </value>
            <value>
                <fullName>Defense</fullName>
            </value>
            <value>
                <fullName>Record Sealing</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Access</fullName>
            </value>
            <value>
                <fullName>School Discipline</fullName>
            </value>
            <value>
                <fullName>Special Education</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>