unpackaged/main/default/objects/Case__c/fields/Location_of_crime__c.field-meta.xml
<CustomField>
    <fullName>Location_of_crime__c</fullName>
    <label>Location of crime</label>
    <length>255</length>
    <type>Text</type>
</CustomField>