unpackaged/main/default/objects/Case__c/fields/Military_Active_Reserve__c.field-meta.xml
<CustomField>
    <fullName>Military_Active_Reserve__c</fullName>
    <label>Military (Active/Reserve)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>