unpackaged/main/default/objects/Case__c/fields/Monthly_gross_household_income__c.field-meta.xml
<CustomField>
    <fullName>Monthly_gross_household_income__c</fullName>
    <label>Monthly gross household income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>