unpackaged/main/default/objects/Case__c/fields/No_of_children__c.field-meta.xml
<CustomField>
    <fullName>No_of_children__c</fullName>
    <label>No. of children</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>