unpackaged/main/default/objects/Case__c/fields/Other_Gender__c.field-meta.xml
<CustomField>
    <fullName>Other_Gender__c</fullName>
    <label>Other Gender</label>
    <length>255</length>
    <type>Text</type>
</CustomField>