unpackaged/main/default/objects/Case__c/fields/Preferred_Pronoun__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Pronoun__c</fullName>
    <label>Preferred Pronoun</label>
    <length>255</length>
    <type>Text</type>
</CustomField>