unpackaged/main/default/objects/Case__c/fields/Previous_Legal_Names__c.field-meta.xml
<CustomField>
    <fullName>Previous_Legal_Names__c</fullName>
    <label>Previous Legal Names</label>
    <length>255</length>
    <type>Text</type>
</CustomField>