unpackaged/main/default/objects/Case__c/fields/Safe_To_Call__c.field-meta.xml
<CustomField>
    <fullName>Safe_To_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Safe To Call</label>
    <type>Checkbox</type>
</CustomField>