unpackaged/main/default/objects/Case__c/fields/Safe_To_Leave_Voicemail__c.field-meta.xml
<CustomField>
    <fullName>Safe_To_Leave_Voicemail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Safe To Leave Voicemail</label>
    <type>Checkbox</type>
</CustomField>