unpackaged/main/default/objects/Case__c/fields/Safe_To_Send_Email__c.field-meta.xml
<CustomField>
    <fullName>Safe_To_Send_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Safe To Send Email</label>
    <type>Checkbox</type>
</CustomField>