unpackaged/main/default/objects/Case__c/fields/Safety_Planning_Completed_within_72_hrs__c.field-meta.xml
<CustomField>
    <fullName>Safety_Planning_Completed_within_72_hrs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Safety Planning Completed with Client within 72 hours before Submitting this Form</description>
    <inlineHelpText>Safety Planning Completed with Client within 72 hours before Submitting this Form</inlineHelpText>
    <label>Safety Planning Completed within 72 hrs</label>
    <type>Checkbox</type>
</CustomField>