unpackaged/main/default/objects/Case__c/fields/Second_Point_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Second_Point_of_Contact__c</fullName>
    <label>Second Point of Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>