unpackaged/main/default/objects/Case__c/fields/Sexual_Orientation__c.field-meta.xml
<CustomField>
    <fullName>Sexual_Orientation__c</fullName>
    <label>Sexual Orientation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Straight (heterosexual)</fullName>
            </value>
            <value>
                <fullName>Gay</fullName>
            </value>
            <value>
                <fullName>Lesbian</fullName>
            </value>
            <value>
                <fullName>Bisexual</fullName>
            </value>
            <value>
                <fullName>Asexual</fullName>
            </value>
            <value>
                <fullName>Not sure / Questioning</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>