unpackaged/main/default/objects/Case__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>open</fullName>
            </value>
            <value>
                <fullName>rejected</fullName>
            </value>
            <value>
                <fullName>conflict</fullName>
            </value>
            <value>
                <fullName>offered</fullName>
            </value>
            <value>
                <fullName>accepted</fullName>
            </value>
            <value>
                <fullName>assigned</fullName>
            </value>
            <value>
                <fullName>archived</fullName>
            </value>
            <value>
                <fullName>unpublished</fullName>
            </value>
            <value>
                <fullName>confirm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>