unpackaged/main/default/objects/Case__c/fields/Type_of_Crime__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Crime__c</fullName>
    <label>Type of Crime</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abduction</fullName>
            </value>
            <value>
                <fullName>Arson</fullName>
            </value>
            <value>
                <fullName>Assault (non-sexual)</fullName>
            </value>
            <value>
                <fullName>Burglary</fullName>
            </value>
            <value>
                <fullName>Child Abuse or Neglect</fullName>
            </value>
            <value>
                <fullName>Conservatorship / Guardianship / Fraud Abuse</fullName>
            </value>
            <value>
                <fullName>Cruelty to Animals</fullName>
            </value>
            <value>
                <fullName>Cyberstalking</fullName>
            </value>
            <value>
                <fullName>Destruction of Property</fullName>
            </value>
            <value>
                <fullName>Domestic Violence</fullName>
            </value>
            <value>
                <fullName>DWI / DUI Survivor</fullName>
            </value>
            <value>
                <fullName>Elder Abuse or Neglect</fullName>
            </value>
            <value>
                <fullName>Financial Exploitation</fullName>
            </value>
            <value>
                <fullName>Hate or Bias Crime</fullName>
            </value>
            <value>
                <fullName>Homicide Survivor</fullName>
            </value>
            <value>
                <fullName>Human Trafficking-Labor</fullName>
            </value>
            <value>
                <fullName>Human Trafficking-Sexual</fullName>
            </value>
            <value>
                <fullName>Identity Theft</fullName>
            </value>
            <value>
                <fullName>Other (pls specify)</fullName>
            </value>
            <value>
                <fullName>Robbery</fullName>
            </value>
            <value>
                <fullName>Sexual Assault</fullName>
            </value>
            <value>
                <fullName>Stalking</fullName>
            </value>
            <value>
                <fullName>Theft</fullName>
            </value>
            <value>
                <fullName>Threats</fullName>
            </value>
            <value>
                <fullName>Arrest Record?</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>