unpackaged/main/default/objects/Case__c/fields/Victim_of_a_crime_in_the_past__c.field-meta.xml
<CustomField>
    <fullName>Victim_of_a_crime_in_the_past__c</fullName>
    <description>Have you ever been a victim of a crime in the past?</description>
    <inlineHelpText>Have you ever been a victim of a crime in the past?</inlineHelpText>
    <label>Victim of a crime in the past?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes, by the same person</fullName>
            </value>
            <value>
                <fullName>Yes, by a different person</fullName>
            </value>
            <value>
                <fullName>Yes, by both same person and different person</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>